# AI-ML-Playground

./: .gitignore  MovieRecommender.ipynb  README.md
competitions/acm-css-weekly-series/acm-css-weekly-series-1/: sample_submission.csv  week1.ipynb
qwen-playground/: .gitignore  README.md  main.py  pyproject.toml
qwen-playground/notebooks/: 01_tweet_factory.ipynb
qwen-playground/scripts/: fetch_wattpad_stories.py
ragging/: .env.example  .gitignore  README.md  main.py  pyproject.toml
ragging/data/: sample.txt
ragging/utils/: vectorstore.py
