[project]
name = "qwen-playground"
version = "0.1.0"
description = "Local LLM Playground"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "brotli>=1.1.0",
    "datasets>=4.4.2",
    "fastapi>=0.128.0",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.31.0",
    "rich>=14.2.0",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
